# HS-TMS

./: .gitignore  CHANGE.md  Caddyfile.dev  Caddyfile.prod  README.md  default.conf  docker-compose.yaml  init.sql  pre-commit-setup.sh  setup.cfg
.github/workflows/: prettier-check.yml
backend/: .env.example  Dockerfile  init-demo.sql  init.sql  package-lock.json  package.json
backend/src/: create-tables.sql  index.js  main.js  projects.js  reminders.js  transactions.js  users.js  variables.js
backend/src/auth/: OAuth2Strategy.js  demoLocal.js  fenixOAuth2.js
backend/src/controllers/: projectController.js  reminderController.js  transactionController.js  userController.js
backend/src/cron/: dailyReminders.js  dailyStorageBackup.js  monthlyDummyData.js  weeklyBackup.js
backend/src/middleware/: convertBodyToJSON.js  demoUserRestriction.js  error.js  isLoggedIn.js  isLoggedin.js  parseMultipartFormData.js  selectPool.js
backend/src/models/: Project.js  Reminder.js  Transaction.js  User.js  demoPool.js  pool.js
backend/src/routes/: authRoutes.js  logRoutes.js  projectRoutes.js  reminderRoutes.js  transactionRoutes.js  userRoutes.js
backend/src/scripts/: restoreState.js  unscheduledBackup.js
backend/src/utils/: dateUtils.js  fileUtils.js
frontend/: .env.example  .prettierrc  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: Alerts.js  App.css  App.jsx  Axios.js  index.css  main.jsx
frontend/src/components/: BalanceTimeSeries.jsx  ConfirmationModal.jsx  DashboardCard.jsx  DataTable.jsx  DropdownBtn.jsx  FadingAlert.jsx  Home.jsx  (+36 more)
(+25 files in other folders)
