[metadata]
name = hs-tms
description = HackerSchools Treasury Management System
author = filipe-varela
license = Apache License 2.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = hs-tms
# install_requires = <colocar aqui bibliotecas para usar
python_requires = >=3.6
package_dir =
    =src
zip_safe = no